added timing to result

--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
                     <th>Circuit</th>
                     <th>Winner</th>
                     <th>Constructor</th>
+                    <th>Time</th>
                 </tr>
             </thead>
             <tbody>
@@ -40,11 +41,11 @@
                     <td id="circuit"></td>
                     <td id="winner"></td>
                     <td id="constructor"></td>
+                    <td id="time"></td>
                 </tr>
             </tbody>   
         </table>
 
-        <!-- FOR FUTURE ADDITION -->
         <div class="hidden"> 
             <button id="full-standings">Get Full Standings</button><br>
             <span id="full-standings-text"></span>
