added label to indicate years

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <h2>F1 Race Results Generator</h2>
         <form>
             <div>
-                <label for="year">Year</label>
+                <label for="year">Year</label><sub> (1950 - 2021)</sub><br>
                 <input type="number" id="year"><br>
                 <label for="round" style="margin: 0;">Round</label><sub>(Which race during the year)</sub><br>
                 <input type="number" id="round">
